--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,4 @@
 {
-  "rewrites": [
-    {
-      "source": "/sitemap.xml",
-      "destination": "/api/sitemap"
-    }
-  ],
   "headers": [
     {
       "source": "/sitemap.xml",
@@ -19,5 +13,10 @@
         }
       ]
     }
-  ]
+  ],
+  "functions": {
+    "api/sitemap.ts": {
+      "maxDuration": 10
+    }
+  }
 }
